--- a/src/PosterPage/poster.css
+++ b/src/PosterPage/poster.css
@@ -20,10 +20,11 @@
   font-weight: bold;
   text-align: center;
   background: transparent;
-  color: black;
+  color: white;
   border: none;
   outline: none;
   padding-top: 13px;
+  font-family: 'Anek Malayalam', sans-serif;
 }
 
 .upload-box {
@@ -44,7 +45,7 @@
 .upload-box img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 /* Box positions */
